--- a/css/styles.css
+++ b/css/styles.css
@@ -141,24 +141,36 @@ img {
 }
 
 /* Gallery */
-.gallery-flex {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
+.gallery-grid {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
 	gap: 20px;
 }
 
 .gallery-item {
-	width: calc(100% / 3 - 20px);
 	border-radius: 8px;
 }
 
 .gallery-item img {
 	border-radius: 10px;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .gallery-item:hover {
 	opacity: 0.9;
+}
+
+.gallery-item:nth-of-type(3),
+.gallery-item:nth-of-type(2),
+.gallery-item:nth-of-type(6) {
+	grid-column: span 2;
+}
+
+.gallery-item:nth-of-type(7) {
+	grid-column: span 2;
+	grid-row: span 2;
 }
 
 /* Footer */
@@ -273,11 +285,15 @@ img {
 		font-size: 1.8rem;
 	}
 
-	.gallery-item {
-		width: calc(100% / 2 - 20px);
-	}
-
 	.footer .footer-flex {
 		text-align: center;
+	}
+
+	.gallery-grid {
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.gallery-item:nth-of-type(2) {
+		grid-column: span 1;
 	}
 }
